Archive2/a6/f0541c23dcdde7/output
main.cpp:3:9: error: use of undeclared identifier 'std'
        std::cout << rand() % 10 + 1 << std::endl;
        ^
main.cpp:3:22: error: use of undeclared identifier 'rand'
        std::cout << rand() % 10 + 1 << std::endl;
                     ^
main.cpp:3:41: error: use of undeclared identifier 'std'
        std::cout << rand() % 10 + 1 << std::endl;
                                        ^
3 errors generated.
